<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright(c) 2017 lizhaotailang
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/preferences_settings">

    <PreferenceCategory
        android:title="@string/web_set">

        <EditTextPreference
            android:key="pre_url_address"
            android:title="@string/input_url_address"
            android:summary="http://"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/system_set">

        <Preference
            android:key="pre_modify_pwd"
            android:title="@string/modify_pwd"
            android:summary="******"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/url_history">

        <ListPreference
            android:key="pre_url_history"
            android:title="@string/url_history"
            android:summary="%s"
            android:dependency="pre_url_address" />

        <Preference
            android:key="pre_clear_history"
            android:title="@string/clear_url_history"
            android:dependency="pre_url_history"/>

    </PreferenceCategory>


</PreferenceScreen>