<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/img_head"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="headPortrait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_account"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <com.example.htmlviewer.view.ResetEditView
        android:id="@+id/edit_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:visibility="visible"
        app:edit_hint="输入用户名"
        app:edite_icon="@mipmap/login_user"
        app:layout_constraintTop_toBottomOf="@+id/img_head"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_middle"/>

    <com.example.htmlviewer.view.ResetEditView
        android:id="@+id/edt_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_item_margin"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:edit_hint="输入密码"
        app:edit_inputType="password"
        app:edite_icon="@mipmap/login_mima"
        app:layout_constraintTop_toBottomOf="@+id/edit_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_middle"/>

    <Button
        android:id="@+id/btn_login"
        style="@style/ConfigButton"
        android:text="@string/login"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/btn_login_selector"
        app:layout_constraintTop_toBottomOf="@+id/guideline_middle"/>

    <TextView
        android:id="@+id/txt_register"
        style="@style/WTPrimaryColorText"
        android:text="@string/register"
        android:textSize="@dimen/text_size_small"
        android:padding="10dp"
        android:layout_marginTop="@dimen/login_item_margin"
        android:layout_marginLeft="@dimen/config_btn_margin"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/txt_forget_pwd"
        style="@style/WTPrimaryColorText"
        android:text="@string/forget_pwd"
        android:textSize="@dimen/text_size_small"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/config_btn_margin"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/txt_tip_shortcut"
        style="@style/WTPrimaryColorText"
        android:text="@string/login_shortcut"
        android:textColor="@color/lightGray"
        android:textSize="14sp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintTop_toBottomOf="@id/txt_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_center_ver"
        style="@style/WTLayoutWW"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline_bottom"
        style="@style/WTLayoutWW"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        app:layout_constraintTop_toBottomOf="@+id/txt_tip_shortcut"/>

</android.support.constraint.ConstraintLayout>